objects/Quote_Approval_Violation__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <label>Approval Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Qualification_Value__c</fullName>
        <label>Deal Qualification Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Qualification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Qualification</label>
        <referenceTo>Deal_Qualification__c</referenceTo>
        <relationshipLabel>Quote Approval Violations</relationshipLabel>
        <relationshipName>Quote_Approval_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Value__c</fullName>
        <label>Quote Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Quote Approval Violations</relationshipLabel>
        <relationshipName>Quote_Approval_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quote Approval Violation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QV-{000000}</displayFormat>
        <label>Quote Approval Violation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Approval Violations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>